--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.zip filter=lfs diff=lfs merge=lfs -text
+.\unified_summ\unified_model.zip filter=lfs diff=lfs merge=lfs -text
+.\unified_summ\abstracter_model.zip filter=lfs diff=lfs merge=lfs -text
+.\unified_summ\extractor_model.zip filter=lfs diff=lfs merge=lfs -text
